--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,7 @@
 {
     "require": {
         "pietercolpaert/hardf": "^0.1.1",
-        "easyrdf/easyrdf": "^0.9.1"
+        "easyrdf/easyrdf": "^0.9.1",
+        "guzzlehttp/psr7": "^1.4"
     }
 }
