Add composer metadata
This enables this library to be installed from its gitlab
repo from other projects.

--- a/composer.json
+++ b/composer.json
@@ -1,4 +1,6 @@
 {
+    "name": "res/liblod-php",
+    "version": "0.0.1",
     "require": {
         "pietercolpaert/hardf": "^0.1.1",
         "easyrdf/easyrdf": "^0.9.1",
