--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "pietercolpaert/hardf": "^0.1.1",
         "easyrdf/easyrdf": "^0.9.1",
-        "guzzlehttp/psr7": "^1.4"
+        "guzzlehttp/psr7": "^1.4",
+        "guzzlehttp/guzzle": "^6.2"
     }
 }
