--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,8 @@
         "easyrdf/easyrdf": "^0.9.1",
         "guzzlehttp/psr7": "^1.4",
         "guzzlehttp/guzzle": "^6.2"
+    },
+    "require-dev": {
+        "phpmd/phpmd": "^2.6"
     }
 }
