Convert build file to use Robo
Tweak README to reflect this.

--- a/composer.json
+++ b/composer.json
@@ -23,6 +23,7 @@
     },
     "require-dev": {
         "phpmd/phpmd": "^2.6",
-        "phpcheckstyle/phpcheckstyle": "^0.14.6"
+        "phpcheckstyle/phpcheckstyle": "^0.14.6",
+        "consolidation/robo": "^1.1"
     }
 }
