Use valid SPDX licence code in composer.json
Packagist highlighted the invalid licence string in the
composer.json file, which prevented the package from
updating.

Use a recognised licence string from https://spdx.org/ to allow
package to validate.

--- a/composer.json
+++ b/composer.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "stability": "beta",
     "type": "project",
-    "license": "Apache v2",
+    "license": "Apache-2.0",
     "description": "A LOD client library.",
     "authors": [
         {
